--- a/目录.md
+++ b/目录.md
@@ -8,4 +8,5 @@
 
 #### [push本地文件到github](https://github.com/louisyanglu/DailyNotes/blob/master/2021-05/%E4%B8%8A%E4%BC%A0%E6%96%87%E4%BB%B6%E5%88%B0github.md)
 
-#### git常用命令
+#### git常用操作
+
