--- a/目录.md
+++ b/目录.md
@@ -8,5 +8,5 @@
 
 #### [push本地文件到github](https://github.com/louisyanglu/DailyNotes/blob/master/2021-05/%E4%B8%8A%E4%BC%A0%E6%96%87%E4%BB%B6%E5%88%B0github.md)
 
-#### git常用操作
+#### [git常用操作](https://github.com/louisyanglu/DailyNotes/blob/master/2021-05/git%E5%B8%B8%E7%94%A8%E6%93%8D%E4%BD%9C.md)
 
