--- a/目录.md
+++ b/目录.md
@@ -10,6 +10,8 @@
 
 #### [git常用操作](https://github.com/louisyanglu/DailyNotes/blob/master/2021-05/git%E5%B8%B8%E7%94%A8%E6%93%8D%E4%BD%9C.md)
 
+#### [git其它笔记](https://github.com/louisyanglu/DailyNotes/tree/master/others/git%E7%AC%94%E8%AE%B0)
+
 ------
 
 ### Numpy基础
